--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -198,11 +198,6 @@ header nav .tools .hamburger-close img {
   height: 14px;
 }
 
-/* hide desktop sections menu */
-header nav .sections {
-  display: none;
-}
-
 /* hamburger menu */
 header nav .sections {
   display: flex;
@@ -270,11 +265,6 @@ header nav .sections .section > a {
   text-transform: uppercase;
 }
 
-header nav .sections .section a:hover {
-  color: currentColor;
-  text-decoration: none;
-}
-
 header nav .sections .section a::after {
   position: absolute;
   right: 15px;
@@ -287,13 +277,8 @@ header nav .sections .section a::after {
   margin-top: -4px;
 }
 
-header nav .sections .section.expand > a::after {
-  content: '\f104';
-  right: unset;
-  left: 0
-}
-
-header nav .sections .section ul > li > *:not(a.primary-link,ul) {
+header nav .sections .section li > *:not(a.primary-link,ul) {
+  /* hide all elements in list items but the primary link and any sub list */
   display: none;
 }
 
@@ -308,36 +293,46 @@ header nav .sections .section > ul > li > p.title {
   margin: 0;
 }
 
-header nav .sections .section ul > li.overview a::after {
-  content: unset;
-}
-
-header nav .sections .section ul > li a::after {
+header nav .sections .section > ul > li a::after {
   content: '\f067';
   font-size: 14px;
   margin-top: 0;
 }
 
+header nav .sections .section.expand > a::after {
+  content: '\f104';
+  right: unset;
+  left: 0
+}
+
+header nav .sections .section > ul > li.overview a::after {
+  content: unset;
+}
+
 /* 2nd and deeper levels */
+header nav .sections .section > ul > li.expand > ul {
+  padding-left: 15px;
+}
+
 header nav .sections .section > ul > li > ul > li a {
   padding-top: 0;
 }
 
-header nav .sections .section ul > li.expand a::after {
+header nav .sections .section > ul > li.expand a::after {
   content: '\f068';
 }
 
-header nav .sections .section ul > li.expand > ul li a::after {
+header nav .sections .section > ul > li.expand > ul li a::after {
   content: unset;
 }
 
-header nav .sections .section ul li.expand > ul {
-  padding-left: 15px;
+header nav .sections .section a:hover {
+  color: currentcolor;
+  text-decoration: none;
 }
 
 /* ----- tablet ------------------------------------------------------ */
 @media (min-width: 768px) {
-
   /* the main mobile div */
   header nav {
     width: 756px;
@@ -379,7 +374,6 @@ header nav .sections .section ul li.expand > ul {
 
 /* ------ Desktop -------------------------------------------------------- */
 @media (min-width: 992px) {
-
   /* hide mobile search toggle */
   header nav .search-toggle {
     display: none;
@@ -530,11 +524,6 @@ header nav .sections .section ul li.expand > ul {
     line-height: 1;
   }
 
-  header nav .sections .section > ul {
-    position: absolute;
-    left: 0;
-  }
-
   header nav .sections .section.expand {
     padding: 0;
   }
@@ -556,10 +545,16 @@ header nav .sections .section ul li.expand > ul {
 
   /* flyout */
   header nav .sections .section > ul {
+    position: absolute;
+    left: 0;
     display: none;
     background-color: #fff;
     padding: 40px 15px 0 92.5px;
     width: 100%;
+  }
+
+  header nav .sections .section.expand ul {
+    height: auto;
   }
 
   header nav .sections .section.expand > ul {
@@ -569,53 +564,20 @@ header nav .sections .section ul li.expand > ul {
     height: auto;
   }
 
-  header nav .sections .section > ul > li {
+  header nav .sections .section.expand > ul > li {
     margin-bottom: 20px;
   }
 
-  header nav .sections .section.image-list > ul > li {
-    width: 775px;
-  }
-
-  header nav .sections .section ul ul,
-  header nav .sections .section ul > li > *:not(a.primary-link,ul) {
-    height: auto;
+  header nav .sections .section.expand li > *:not(a.primary-link,ul) {
+    /* show all elements in all list items */
     display: block;
   }
 
-  header nav .sections .section > ul > li > p.title {
-    font-size: 24px;
-    line-height: 1.333;
-    border-bottom: 1px solid var(--background-light-gray);
-    padding-bottom: 10px;
-    margin-bottom: 8px;
-  }
-
-  header nav .sections .section > ul > li > p.title a {
-    font-family: var(--ff-volvo-novum-medium);
-  }
-
-  header nav .sections .section > ul > li > p.subtitle {
-    margin: 8px 0;
-    display: flex;
-    flex-direction: row-reverse;
-    font-size: 12px;
-    color: var(--volvo-text-light-gray);
-  }
-
-  header nav .sections .section > ul > li > p.title > *,
-  header nav .sections .section > ul > li > p.subtitle > * {
-    text-align: left;
-    font-size: inherit;
-    padding: 0;
-  }
-
-  header nav .sections .section > ul > li a::after,
   header nav .sections .section.expand > ul > li a::after {
     content: unset;
   }
 
-  header nav .sections .section > ul > li > ul a {
+  header nav .sections .section.expand > ul > li > ul a {
     margin: 0;
     padding: 0;
     text-align: left;
@@ -623,18 +585,45 @@ header nav .sections .section ul li.expand > ul {
     line-height: 1.5;
   }
 
-  header nav .sections .section > ul > li > ul p {
+  header nav .sections .section.expand > ul > li > p.title {
+    font-size: 24px;
+    line-height: 1.333;
+    border-bottom: 1px solid var(--background-light-gray);
+    padding-bottom: 10px;
+    margin-bottom: 8px;
+  }
+
+  header nav .sections .section.expand > ul > li > p.title a {
+    font-family: var(--ff-volvo-novum-medium);
+  }
+
+  header nav .sections .section.expand > ul > li > p.subtitle {
+    margin: 8px 0;
+    display: flex;
+    flex-direction: row-reverse;
+    font-size: 12px;
+    color: var(--volvo-text-light-gray);
+  }
+
+  header nav .sections .section.expand > ul > li > p.title > *,
+  header nav .sections .section.expand > ul > li > p.subtitle > * {
+    text-align: left;
+    font-size: inherit;
+    padding: 0;
+  }
+
+  header nav .sections .section.expand > ul > li > ul p {
     padding: 8px 0;
     margin: 0;
     color: var(--volvo-text-light-gray);
   }
 
-  header nav .sections .section > ul > li > ul a.cta {
+  header nav .sections .section.expand > ul > li > ul a.cta {
     display: inline;
     white-space: normal;
   }
 
-  header nav .sections .section > ul > li > ul a.cta::after {
+  header nav .sections .section.expand > ul > li > ul a.cta::after {
     content: '\f105';
     position: unset;
     margin-left: 8px;
@@ -642,8 +631,16 @@ header nav .sections .section ul li.expand > ul {
     color: var(--link-color);
     font-weight: 700;
   }
+  
+  header nav .sections .section.expand > ul > li > ul > li {
+    width: 126px;
+  }
 
-  header nav .sections .section.image-list > ul > li > ul {
+  header nav .sections .section.expand.image-list > ul > li {
+    width: 775px;
+  }
+
+  header nav .sections .section.expand.image-list > ul > li > ul {
     display: flex;
     column-gap: 30px;
     row-gap: 20px;
@@ -651,37 +648,31 @@ header nav .sections .section ul li.expand > ul {
     justify-content: space-between;
   }
 
-  header nav .sections .section.image-list > ul > li > ul::after {
+  header nav .sections .section.expand.image-list > ul > li > ul::after {
     content: '';
     display: block;
     flex: 2;
   }
 
-  header nav .sections .section.image-list > ul > li > ul > li,
-  header nav .sections .section.link-list > ul > li > ul > li {
-    width: 125px;
-  }
-
-  header nav .sections .section.image-list > ul > li > ul > li img {
+  header nav .sections .section.expand.image-list > ul > li > ul > li img {
     max-width: 100%;
     height: 70.5px;
     object-fit: cover;
   }
 
-  header nav .sections .section.link-list > ul > li > ul {
+  header nav .sections .section.expand.link-list > ul > li > ul {
     display: flex;
     flex-direction: column;
     gap: 12px;
   }
 
-  header nav .sections .section.link-list > ul > li > ul > li a {
+  header nav .sections .section.expand.link-list > ul > li > ul > li a {
     font-size: 14px;
   }
 }
 
 /* ---- Desktop Wide  ------ */
 @media (min-width: 1300px) {
-
   /* nav get fixed width of 1200px */
   header nav {
     grid-template-columns: auto 600px 600px auto;
