51-engine-specifications : styles modified

--- a/blocks/engine-specifications/engine-specifications.css
+++ b/blocks/engine-specifications/engine-specifications.css
@@ -5,38 +5,41 @@ main .engine-specifications-container {
 }
 
 .engine-specifications.engine {
+  color: #141414;
   overflow: hidden;
-  padding-left: 30px;
   display: flex;
   flex-direction: column;
+  margin-top: 80px;
 }
 
 .engine-specifications .engine-title {
-  font-size: var(--heading-font-size-m);
+  font-size: var(--heading-font-size-l);
   margin: 0;
+  text-align: center;
 }
 
 .engine-specifications .item-list {
   display: flex;
   flex-direction: column;
-  padding-left: 0;
+  padding-left: 16px;
   list-style: none;
+  margin: 40px 0 0;
 }
 
 .engine-specifications .item-wrapper {
-  min-height: 80px;
+  margin: 0 0 24px;
 }
 
 .engine-specifications .rating-title,
 .engine-specifications .power-title,
 .engine-specifications .torque-title,
 .engine-specifications .item-title {
+  color: #888B8D;
   font-family: var(--ff-volvo-novum);
-  text-transform: uppercase;
   margin: 0;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 14px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .engine-specifications .rating-item h5,
@@ -44,26 +47,19 @@ main .engine-specifications-container {
 .engine-specifications .torque-item h5,
 .engine-specifications .item-content {
   font-family: var(--ff-volvo-novum);
-  margin: 15px 0 0;
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: 500;
+  margin: 4px 0 0;
+  font-size: 16px;
+  line-height: 130%;
+  font-weight: 400;
+  letter-spacing: 0.15px;
 }
 
-.engine-specifications .power-item h5,
-.engine-specifications .torque-item h5{
-  font-size: 14px;
-}
-
-@media (min-width: 496px){
-  .engine-specifications .item-wrapper {
-    min-height: 90px;
-  }
-
+@media (min-width: 745px){
   .engine-specifications .item-list {
     flex-flow: wrap;
     flex-direction: row;
     overflow: auto;
+    padding: 0 32px;
   }
 
   .engine-specifications .item-list li {
@@ -72,19 +68,29 @@ main .engine-specifications-container {
   }
 }
 
-@media (min-width: 769px){
-  .engine-specifications .item-wrapper {
-    min-height: 100px;
+@media (min-width: 1440px){
+  main .engine-specifications-container {
+    background-color: #F7F7F7;
+    width: 100vw;
+    margin: 0 !important;
   }
-}
 
-@media (min-width: 821px){
-  .engine-specifications .item-list {
-    flex-direction: column;
-    max-width: 50%;
+  .engine-specifications-wrapper {
+    padding: 120px 0  116px;
   }
 
   .engine-specifications.engine {
-    padding: 20px 0 0;
+    background-color: var(--c-white);
+    border-radius: 12px;
+    margin: 0;
+  }
+
+  .engine-specifications .engine-title {
+    margin-top: 40px;
+  }
+
+  .engine-specifications .item-list li {
+    width: 25%;
+    gap: 12px;
   }
 }
