--- a/blocks/engine-specifications/performance-specifications.css
+++ b/blocks/engine-specifications/performance-specifications.css
@@ -9,6 +9,7 @@
 
 .performance .performance-title {
   font-size: var(--heading-font-size-m);
+  color: #141414;
   margin: 0;
   padding-bottom: 8.4px;
   text-align: center;
@@ -132,51 +133,3 @@
   opacity: 1;
   transition-delay: 0;
 }
-
-@media (min-width: 496px){
-  .performance-selector-wrapper {
-    margin: 0 25px;
-  }
-}
-
-@media (min-width: 769px){
-  .performance .performance-title {
-    text-align: left;
-  }
-
-  .performance-selector-wrapper {
-    margin: 0 ;
-  }
-
-  .performance .engine-rating .rating-list {
-    justify-content: flex-start;
-    width: 60%;
-  }
-}
-
-@media (min-width: 821px){
-  .engine-specifications.performance {
-    position: absolute;
-    right: 5%;
-    width: 50%;
-  }
-
-  .performance .engine-rating .rating-list {
-    justify-content: flex-start;
-    width: 80%;
-  }
-
-  .performance-chart {
-    bottom: 35%;
-    padding: 0;
-    width: 55vw;
-    max-height: fit-content;
-    max-width: 640px;
-    left: -5%;
-  }
-
-  .performance .engine-rating .rating-item {
-    width: 100px;
-  }
-}
-
