Issue 4: Main Navigation (#89)
* inital commit
* reenable cookies
* the usual lint nonsense
* remove header tests for now
* removed commented code, use new nav.doc structure
* temporarily use /drafts/mirko/nav.doc
* fixed some css issues
* small css issue
* fix: remove redudant menu
* added comments to make current state more clear
* feat: navigation on desktop
* fix: lint
* fix: lint
* feat: navigation cta
* fix: active section background
* fix: adjust sizing and margins
* fix: polish
* fix: improve search button

---------

Co-authored-by: Dirk Rudolph <drudolph@adobe.com>

--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -32,6 +32,10 @@
   src: url('/fonts/fontawesome-webfont.woff') format('woff');
 }
 
+body.disable-scroll, body.disable-scroll main {
+  overflow: hidden;
+}
+
 :is(h1, h2, h3, h4, h5, h6) > em {
   color: #A7A8A9;
 }
