--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -136,7 +136,7 @@ header nav .semitrans {
   position: fixed;
   opacity: 0;
   background-color: #7F7F7F;
-  transition: visibility .4s linear, opacity .4s cubic-bezier(.4, 0, .2, 1);
+  transition: opacity .2s cubic-bezier(.4, 0, .2, 1);
 }
 
 header nav .hamburger-toggle[aria-expanded=true]~.semitrans {
@@ -157,7 +157,7 @@ header nav .tools {
   top: 0;
   z-index: 100;
   background-color: white;
-  transition: right .4s linear;
+  transition: right .2s cubic-bezier(.4,0,.2,1) .1s;
   border-bottom: 1px solid #E1DFDD;
 }
 
@@ -213,7 +213,7 @@ header nav .sections {
   top: 73px;
   z-index: 100;
   background-color: white;
-  transition: right .4s linear;
+  transition: right .2s cubic-bezier(.4,0,.2,1) .1s;
   overflow: hidden scroll;
 }
 
