fix: section paddings (#99)
* fix: cta link on hero for some cases
* fix: section paddings
* fix: section paddings
* fix: padding of carousel-wrapper

--- a/blocks/tabbed-accordion/tabbed-accordion.css
+++ b/blocks/tabbed-accordion/tabbed-accordion.css
@@ -2,11 +2,11 @@
   display: none;
 }
 
-.tabbed-accordion-wrapper .accordion-header {
+.tabbed-accordion .accordion-header {
   border-top: 1px solid #CBCBCB;
 }
 
-.tabbed-accordion-wrapper .accordion-header button {
+.tabbed-accordion .accordion-header button {
   display: block;
   width: 100%;
   border: none;
@@ -19,32 +19,31 @@
   height: 60px;
 }
 
-.tabbed-accordion-wrapper .accordion-header button::after {
+.tabbed-accordion .accordion-header button::after {
   position: absolute;
   display: inline-block;
   right: 10px;
   font-family: var(--ff-fontawesome);
   font-size: 2.5rem;
-  content: "\f106"
+  content: "\f107"
 }
 
-
-.tabbed-accordion-wrapper .accordion-header button.collapsed::after {
-  content: "\f107";
+.tabbed-accordion .is-active .accordion-header button::after {
+  content: "\f106";
 }
 
-.tabbed-accordion-wrapper .columns-wrapper {
+.tabbed-accordion .columns-wrapper {
   margin-bottom: 50px;
 }
 
-.tabbed-accordion-wrapper .accordion-collapse {
+.tabbed-accordion .accordion-item .accordion-collapse {
   overflow: hidden;
   transition: 0.4s linear;
   transition-property: opacity, height;
   will-change: opacity, contents;
 }
 
-.tabbed-accordion-wrapper .accordion-collapse:not(.is-active) {
+.tabbed-accordion .accordion-item:not(.is-active) .accordion-collapse {
   height: 0;
   opacity: 0;
 }
@@ -54,8 +53,12 @@
     display: block;
   }
 
-  .tabbed-accordion-wrapper .accordion-header {
+  .tabbed-accordion .accordion-header {
     display: none;
   }
   
+  .tabbed-accordion .accordion-item.is-active .accordion-collapse {
+    height: auto;
+    opacity: 1;
+  }
 }
