--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -4,11 +4,6 @@
   --text-color-80: rgb(83 86 90 / 80%);
 }
 
-/* boilderplate: the section containing the block */
-.section.teaser-cards-container {
-  padding: 0;
-}
-
 /* boilerplate: the block element itself that gets passed into js decorate() */
 .block.teaser-cards {
   margin-block-start: 48px;
@@ -19,6 +14,7 @@
 /* first row div */
 .block.teaser-cards > div {
   display: flex;
+  column-gap: 30px;
   flex-flow: column;
 }
 
@@ -26,7 +22,6 @@
 .block.teaser-cards .teaser {
   box-sizing: border-box;
   flex: 0 1 auto;
-  padding: 0 30px 15px;
 }
 
 /* teaser image */
@@ -69,26 +64,30 @@
 }
 
 /* single teaser */
-.block.teaser-cards.teaser-cards-1 .teaser {
+.teaser-cards-wrapper.teaser-cards-1 {
+  padding: 0;
+}
+
+.teaser-cards-1 .block.teaser-cards .teaser {
   width: 100%;
   padding: 0 0 24px;
   background-color: var(--background-light-gray);
   text-align: center;
 }
 
-.block.teaser-cards.teaser-cards-1 :is(h2, h3) {
+.teaser-cards-1 .block.teaser-cards :is(h2, h3) {
   margin: 30px 0 16px;
 }
 
-.block.teaser-cards.teaser-cards-1 p.text {
+.teaser-cards-1 .block.teaser-cards p.text {
   display: none;
 }
 
-.block.teaser-cards.teaser-cards-1 a {
+.block.teaser-cards a {
   background-color: transparent;
 }
 
-.block.teaser-cards.teaser-cards-1 a:hover {
+.block.teaser-cards a:hover {
   border-color: var(--btn-hover);
   color: var(--btn-hover);
 }
@@ -115,7 +114,6 @@
 
   /* each teaser div in the row */
   .block.teaser-cards .teaser {
-    padding-inline: 15px;
     width: 50%;
   }
 
@@ -125,7 +123,7 @@
   }
 
   /* single teaser */
-  .block.teaser-cards.teaser-cards-1 .teaser {
+  .teaser-cards-1 .block.teaser-cards .teaser {
     padding: 8px 0;
     min-height: 250px;
     position: relative;
@@ -136,47 +134,47 @@
     align-items: center;
   }
 
-  .block.teaser-cards.teaser-cards-1.dark .teaser {
+  .teaser-cards-1 .block.teaser-cards.dark .teaser {
     color: var(--text-color);
   }
 
-  .block.teaser-cards.teaser-cards-1 :is(h2, h3, p.text) {
+  .teaser-cards-1 .block.teaser-cards :is(h2, h3, p.text) {
     display: block;
     max-width: 426px;
   }
 
-  .block.teaser-cards.teaser-cards-1 :is(h2, h3) {
+  .teaser-cards-1 .block.teaser-cards :is(h2, h3) {
     margin-block-start: 0;
   }
 
-  .block.teaser-cards.teaser-cards-1 p.image {
+  .teaser-cards-1 .block.teaser-cards p.image {
     margin: 0;
     position: absolute;
     inset: 0;
     z-index: -1;
   }
 
-  .block.teaser-cards.teaser-cards-1 p.image img {
+  .teaser-cards-1 .block.teaser-cards p.image img {
     height: 100%;
   }
 
-  .block.teaser-cards.teaser-cards-1 a {
+  .teaser-cards-1 .block.teaser-cards a {
     background-color: var(--c-white);
     border-color: var(--c-white);
   }
 
-  .block.teaser-cards.teaser-cards-1 a:hover {
+  .teaser-cards-1 .block.teaser-cards a:hover {
     background-color: var(--c-white-80);
     border-color: var(--c-white);
   }
 
-  .block.teaser-cards.teaser-cards-1.dark a {
+  .teaser-cards-1 .block.teaser-cards.dark a {
     background-color: var(--text-color);
     border-color: var(--text-color);
     color: var(--c-white);
   }
 
-  .block.teaser-cards.teaser-cards-1.dark a:hover {
+  .teaser-cards-1 .block.teaser-cards.dark a:hover {
     background-color: var(--text-color-80);
     color: var(--btn-background-hover);
   }
@@ -192,14 +190,14 @@
   }
 
   /* single teaser */
-  .block.teaser-cards.teaser-cards-1 .teaser {
+  .teaser-cards-1 .block.teaser-cards .teaser {
     min-height: 402px;
     display: flex;
     flex-flow: column;
     justify-content: center;
   }
 
-  .block.teaser-cards.teaser-cards-1 p.text {
+  .teaser-cards-1 .block.teaser-cards p.text {
     display: block;
     max-width: 870px;
   }
