--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,7 +255,11 @@ main input:hover {
 }
 
 main .section {
-  padding: 64px 15px;
+  padding: 64px 0;
+}
+
+main .section > div {
+  padding: 0 15px;
 }
 
 main pre {
@@ -334,18 +338,9 @@ main .section.highlight {
   background-color: var(--highlight-background-color);
 }
 
-.section.tabbed-container {
-  padding: 0;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.section.tabbed-container-full-width {
-  width: unset;
-}
-
 .section.tabbed-container-full-width > div {
-  max-width: unset;
+  padding: 0;
+  width: unset;
 }
 
 .section.tabbed-container ul.tab-navigation {
@@ -459,9 +454,11 @@ a.button.text-link-with-video::after {
 }
 
 @media (min-width: 768px) {
-  main .section {
+  main .section > div {
     width: 756px;
     margin: auto;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -476,12 +473,7 @@ a.button.text-link-with-video::after {
     --nav-height: 176px;
   }
 
-  .section > div {
-    max-width: 1200px;
-    margin: auto;
-  }
-
-  main .section {
+  main .section > div {
     width: 960px;
   }
 
@@ -492,7 +484,7 @@ a.button.text-link-with-video::after {
 }
 
 @media (min-width: 1300px) {
-  main .section {
+  main .section > div {
     width: 1200px;
   }
 }
