--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,7 +255,11 @@ main input:hover {
 }
 
 main .section {
-  padding: 64px 0;
+  margin: 48px auto;
+}
+
+main .section:first-child {
+  margin-top: 0;
 }
 
 main .section > div {
@@ -445,7 +449,7 @@ a.button.text-link-with-video::after {
   content: unset;
 }
 
-@media screen and (min-width: 496px) {
+@media screen and (min-width: 480px) {
   .section.tabbed-container ul.tab-navigation li {
     margin: 0 3%;
     display: inline-block;
@@ -456,9 +460,6 @@ a.button.text-link-with-video::after {
 @media (min-width: 768px) {
   main .section > div {
     width: 756px;
-    margin: auto;
-    padding-left: 0;
-    padding-right: 0;
   }
 }
 
