--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -392,7 +392,7 @@ header nav .sections .section .navigation-cta {
       '. brand search .' auto
       '. . . . ' 27px
       'sections sections sections sections' 48px
-      / calc(3.5% + 15px) auto max-content calc(3.5% + 15px);
+      / calc(3.5% + 15px) auto auto calc(3.5% + 15px);
     margin: 25px 0 0;
     padding: 0;
   }
