--- a/blocks/sub-nav/sub-nav.css
+++ b/blocks/sub-nav/sub-nav.css
@@ -1,5 +1,8 @@
 .block.sub-nav nav {
     position: relative;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 .block.sub-nav ul {
@@ -66,11 +69,15 @@
 
 
 @media screen and (min-width: 992px) {
+    .block.sub-nav nav {
+        display: block;
+    }
+
     .block.sub-nav ul {
         position: unset;
         margin: 0 auto;
         padding: 0 15px;
-        max-width: 960px;
+        max-width: 93%;
 
         --item-height: 48px;
 
@@ -92,13 +99,19 @@
         display: none;
     }
 
-
     /* first child */
     .block.sub-nav li:first-child,
     .block.sub-nav li:first-child:not(.active) {
+        padding: 0;
+    }
+
+    .block.sub-nav li:first-child a {
         background-color: black;
-        display: block;
         padding: 0 12px;
+    }
+
+    .block.sub-nav li:first-child a:hover {
+        background-color: unset;
     }
 
     .block.sub-nav li:first-child .caption {
@@ -108,6 +121,7 @@
     .block.sub-nav li:first-child img {
         display: block;
         max-width: 80px;
+        height: auto;
     }
 
     .block.sub-nav li.active:first-child a::after {
@@ -133,5 +147,6 @@
 @media screen and (min-width: 1300px) {
     .block.sub-nav ul {
         max-width: 1200px;
+        padding: 0;
     }
 }
