fix: tabbing order

--- a/blocks/sub-nav/sub-nav.css
+++ b/blocks/sub-nav/sub-nav.css
@@ -1,3 +1,7 @@
+.header.block[data-block-status="loaded"] ~ .block.sub-nav {
+    position: relative;
+}
+
 .block.sub-nav nav {
     position: relative;
     margin: 0;
