--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -17,7 +17,10 @@ header nav {
   padding: 0 21px;
   display: flex;
   flex-flow: row wrap;
-  z-index: 1000;
+}
+
+#nav {
+  z-index: 1010;
 }
 
 /* the brand  */
@@ -574,6 +577,7 @@ header nav .sections .section .navigation-cta {
     background-color: #fff;
     padding: 40px 0 0 92px;
     width: 100%;
+    z-index: 1010;
   }
 
   header nav .sections .section.expand .navigation-cta {
