--- a/blocks/magazine-articles/magazine-articles.css
+++ b/blocks/magazine-articles/magazine-articles.css
@@ -24,14 +24,6 @@
     height: auto;
 }
 
-.block.magazine-articles article h3 {
-    margin-bottom: 10px;
-    font-family: var(--ff-volvo-novum-medium);
-    font-size: var(--heading-font-size-s);
-    letter-spacing: -.1px!important;
-    color: var(--volvo-text-gray);
-}
-
 .block .latest-magazine-articles article p,  .block .related-magazine-articles article p {
     margin-bottom: 8px;
     font-size: 13px;
@@ -79,6 +71,15 @@
     margin-bottom: 16px;
     height: 214px;
     width: 380px;
+}
+
+.block.magazine-articles article h3 {
+    margin-top: 24px;
+    margin-bottom: 16px;
+    display: table;    font-family: var(--ff-volvo-novum-medium);
+    font-size: var(--heading-font-size-s);
+    letter-spacing: -.1px!important;
+    color: var(--volvo-text-gray);
 }
 
 .block.magazine-articles .articles article .content {
